# openai-function-schema-generator

./: README.md
openai_function_definitions/: Cargo.toml
openai_function_definitions/src/: lib.rs
openai_function_definitions/tests/: basic_tests.rs
