[package]
name = "openai_function_definitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
syn = { version = "2.0.38", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
proc-macro = true